--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,14 +39,18 @@ body {
 
 .card__profile-img img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
     cursor: pointer;
 }
 
 .card__profile-img:hover {
     width: 100%;
     height: 100%;
-    border: none;
-    transform: translateY(0px);
+    border: unset;
+    object-fit: cover;
+    transform: unset;
     border-radius: 0;
 }
 
